tests/fixtures/positive/style/ProtectedMemberInFinalClass.kt
package style

class Foo {
    protected val x = 1
    protected fun doWork() {}
}
